--- a/lab03_template.html
+++ b/lab03_template.html
@@ -70,8 +70,8 @@ library(tree)</code></pre>
 <div id="objetivo" class="section level2">
 <h2>Objetivo</h2>
 <ul>
-<li><p>Verificar qual modelo entre <strong>regressão linear</strong> e <strong>árvores de decisão</strong> é o mais adequado para recuperar a o componente azul da imagem <strong>purple_wave.jpge</strong>.</p></li>
-<li><p>Verificar qual modelo entre <strong>regressão linear</strong> e <strong>árvores de decisão</strong> é o mais adequado para recuperar a o componente azul da imagem <strong>xadrez_colorido.jpge</strong>.</p></li>
+<li><p>Verificar qual modelo entre <strong>regressão linear</strong> e <strong>árvores de decisão</strong> é o mais adequado para recuperar a o componente azul da imagem <strong>purple_wave.jpg</strong>.</p></li>
+<li><p>Verificar qual modelo entre <strong>regressão linear</strong> e <strong>árvores de decisão</strong> é o mais adequado para recuperar a o componente azul da imagem <strong>xadrez_colorido.jpg</strong>.</p></li>
 </ul>
 </div>
 <div id="preparacao-do-banco-de-dados" class="section level2">
@@ -188,7 +188,7 @@ img_df_amostra &lt;- img_df %&gt;%
 <div id="exercicio-5-outra-imagem" class="section level3">
 <h3>Exercício 5: Outra Imagem</h3>
 <ul>
-<li>Repita os exercícios de 1 a 4, mas agora para a imagem <em>xadrez_colorido.jpge</em>.</li>
+<li>Repita os exercícios de 1 a 4, mas agora para a imagem <em>xadrez_colorido.jpg</em>.</li>
 </ul>
 <pre class="r"><code>## código aqui</code></pre>
 <ul>
